--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js"></script>
+    <script src="https://apis.google.com/js/api.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
@@ -15,5 +16,7 @@
     <script src="node.js"></script>
     <script src="astro.js"></script>
     <script src="todolist.js"></script>
+    <script src="calendar.js"></script>
+
   </body>
 </html>
